[tool.poetry]
name = "playwr"
version = "0.1.0"
description = ""
authors = ["bodrovis <bodrovis@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.45.1"
requests = "^2.31"
lxml = "^5.1"
beautifulsoup4 = "^4.12"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
